<resources>
    <string name="app_name">LazyAss</string>
    <string name="channel_name">channelDummyName</string>
    <string name="channel_description">changelDummyDescreption</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="button_register">Set Notification Time(in secs)</string>
    <string name="button_unregister">stop annoying me</string>
    <string name="timeInput">60</string>
    <string name="nextNotification">next notification:</string>
    <string name="countdowntext">0 s</string>
</resources>
